Force page width for now to prevent header wrapping
fixes #5274

--- a/ui/styl/partials/layout.styl
+++ b/ui/styl/partials/layout.styl
@@ -33,6 +33,7 @@ html
 body
   height 100%
   background-color $secondary-gray-4
+  min-width 650px
 
 #root
   position relative
